SERVER-131410 Enforce timeseries ban for expanded extension search stages (#58733)

GitOrigin-RevId: b23438bd257669df49551cb380ade6524b332b47